<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity"
    android:gravity="center"
    android:orientation="vertical">
    <EditText
        android:id="@+id/email_input"
        android:hint="@string/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="24dp"/>
    <EditText
        android:id="@+id/password_input"
        android:hint="@string/password"
        android:layout_width="300dp"
        android:layout_marginBottom="24dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/username_input"
        android:hint="@string/username"
        android:layout_width="300dp"
        android:layout_marginBottom="24dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:inputType="text"/>
    <EditText
        android:id="@+id/fullname_input"
        android:hint="@string/full_name"
        android:layout_width="300dp"
        android:layout_marginBottom="24dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:inputType="text"/>
    <EditText
        android:id="@+id/bio_input"
        android:hint="@string/bio"
        android:layout_width="300dp"
        android:layout_marginBottom="24dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:inputType="text" />
    <TextView
        android:id="@+id/error_message"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_dark"/>
    <Button
        android:id="@+id/auth_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="24dp"
        android:onClick="loginEmail"/>
    <TextView
        android:id="@+id/toggle_register"
        android:layout_width="300dp"
        android:text="@string/create_an_account"
        android:onClick="toggleRegister"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"/>
    <TextView
        android:layout_width="300dp"
        android:text="@string/or"
        android:gravity="center"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="300dp"
        android:onClick="loginGoogle"
        android:layout_height="wrap_content"
        android:text="@string/login_with_google"/>
    <Button
        android:layout_width="300dp"
        android:onClick="loginFacebook"
        android:layout_height="wrap_content"
        android:text="@string/login_with_facebook"/>
</LinearLayout>
</layout>
